# Fcllm

./: .gitignore  Candle框架本身的限制.md  Cargo.toml  README.md  README2.md  e.txt  output(fast_version).txt  output(normal_version).txt  output.txt  目前的终端输出.txt
Fate/: .gitignore  dataset.py  main.py  quantizer.py  utils.py  weights_download.py
Fate/models/Qwen/: configuration_qwen.py  modeling_qwen_moe.py
datasets/ChatGPT-prompts/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
src/: Attention.rs  Cache.rs  DecoderLayer.rs  ForCausalLM.rs  MLP.rs  Model.rs  RmsNorm.rs  RotaryEmbedding.rs  SparseMoeBlock.rs  args.rs  configuration_qwen.rs  expert_ARC_cache.rs  expert_ARC_cahce.rs  lib.rs  linear.rs  load.rs  main.rs  modeling_qwen_moe.rs  nn_embedding.rs  quantizer.rs  server.rs  time_record.rs  utils.rs
src/models/: mod.rs
src/models/DeepSeekMoE/: configuration_deepseek.py  modeling_deepseek.py
src/models/Qwen/: configuration_qwen.rs  mod.rs  modeling_qwen_moe.rs
src/tests/: Attention_test.rs  MLP_test.rs  RmsNorm_test.rs  RotaryEmbedding_test.rs  load_test.rs
