[package]
name = "Fcllm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
hf-hub = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
nvml-wrapper = "0.10.0"
rayon = "1.8"
counter = "0.2.1"
tqdm = "0.7.0"
hashbrown = "0.12"
dashmap = "4.0.1"
half = "2.6.0"
maplit = "1.0"
safetensors = "0.4"