[package]
name = "Fcllm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
hf-hub = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
nvml-wrapper = "0.11.0"
tqdm = "0.7.0"
clap = { version = "4.5.39", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset"] }

# HTTP 服务器相关依赖
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
open = "5"

# 桌面原生窗口（WebView2，Windows 11 自带，无需额外安装）
wry = "0.55"
tao = "0.35"

[features]
my_own_version = []
